# jdcoin

./: CMakeLists.txt  CONTRIBUTING.md  COPYING  INSTALL  Makefile.am  README.md  configure.ac
build-aux/m4/: bitcoin_qt.m4  gmp.m4
build-aux/snap/: snapcraft.yaml
contrib/: gitian-build.py  install_db4.sh  jdcoin-cli.bash-completion  jdcoin-qt.pro  jdcoin-tx.bash-completion  jdcoind.bash-completion  valgrind.supp
contrib/bitrpc/: bitrpc.py
contrib/debian/: README.md  changelog  control  jdcoin-qt.desktop  jdcoin-qt.install  jdcoin-qt.lintian-overrides  jdcoin-qt.manpages  jdcoin-qt.protocol  jdcoind.bash-completion  jdcoind.examples  jdcoind.install  jdcoind.lintian-overrides  jdcoind.manpages  jdcoind.postinst  jdcoind.postrm  jdcoind.service  rules  watch
contrib/devtools/: README.md  check-doc.py  copyright_header.py  gen-manpages.sh  logprint-scanner.py  update-translations.py
contrib/gitian-descriptors/: gitian-linux.yml  gitian-osx-signer.yml  gitian-osx.yml  gitian-win-signer.yml  gitian-win.yml
contrib/gitian-keys/: README.md
contrib/init/: README.md  jdcoind.conf  jdcoind.init  jdcoind.openrc  jdcoind.openrcconf  jdcoind.service  org.jdcoin.jdcoind.plist
contrib/linearize/: linearize-hashes.py
contrib/macdeploy/: README.md  custom_dsstore.py  detached-sig-create.sh  fancy.plist  macdeployqtplus
contrib/qos/: README.md  tc.sh
contrib/rpm/: jdcoin.fc  jdcoin.if  jdcoin.spec  jdcoin.te
contrib/seeds/: README.md  generate-seeds.py  makeseeds.py
depends/: Makefile  README.md
doc/: Doxyfile.in  README.md  README_windows.txt  REST-interface.md  build-osx.md  build-unix.md  build-windows.md  dependencies.md  developer-notes.md  dnsseed-policy.md  files.md  gitian-building.md  init.md  release-notes.md  release-process.md  tor.md  translation_process.md  translation_strings_policy.md  zmq.md
doc/man/: Makefile.am  (+4 more)
share/: setup.nsi.in  ui.rc
src/: Makefile.am  Makefile.bench.include  Makefile.qt.include  Makefile.qt_locale.include  Makefile.qttest.include  Makefile.test.include  activemasternode.cpp  activemasternode.h  addrdb.cpp  addrdb.h  addressbook.cpp  addressbook.h  addrman.cpp  addrman.h  amount.cpp  amount.h  base58.h  bip38.cpp  bip38.h  blob_uint256.h  blocksignature.cpp  blocksignature.h  bloom.cpp  chain.cpp  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.cpp  chainparamsbase.h  checkpoints.cpp  checkpoints.h  clientversion.cpp  clientversion.h  coincontrol.h  coins.cpp  coins.h  compat.h  core_write.cpp  crypter.cpp  crypter.h  (+87 more)
src/qt/: CMakeLists.txt  addressbookpage.cpp  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog.cpp  askpassphrasedialog.h  bantablemodel.cpp  bantablemodel.h  bitcoinunits.cpp  bitcoinunits.h  clientmodel.cpp  clientmodel.h  coincontroldialog.cpp  coincontroldialog.h  editaddressdialog.cpp  guiconstants.h  guiutil.cpp  guiutil.h  intro.cpp  jdcoin.cpp  jdcoin.qrc  jdcoin_locale.qrc  jdcoinstrings.cpp  macnotificationhandler.h  macnotificationhandler.mm  notificator.h  openuridialog.cpp  openuridialog.h  optionsdialog.cpp  optionsmodel.cpp  optionsmodel.h  paymentserver.cpp  paymentserver.h  peertablemodel.cpp  recentrequeststablemodel.cpp  recentrequeststablemodel.h  rpcconsole.cpp  rpcconsole.h  transactionfilterproxy.cpp  transactionrecord.cpp  (+7 more)
src/qt/forms/: addressbookpage.ui  coincontroldialog.ui  helpmessagedialog.ui  intro.ui  optionsdialog.ui  rpcconsole.ui
src/qt/jdcoin/: addnewaddressdialog.cpp  addnewaddressdialog.h  addnewcontactdialog.cpp  addnewcontactdialog.h  addresseswidget.cpp  addresseswidget.h  addressfilterproxymodel.cpp  addressfilterproxymodel.h  addressholder.cpp  addressholder.h  addresslabelrow.cpp  addresslabelrow.h  coldstakingmodel.cpp  coldstakingmodel.h  coldstakingwidget.cpp  coldstakingwidget.h  contactdropdownrow.cpp  contactdropdownrow.h  contactsdropdown.cpp  contactsdropdown.h  csrow.cpp  csrow.h  dashboardwidget.cpp  dashboardwidget.h  defaultdialog.cpp  defaultdialog.h  expandablebutton.cpp  expandablebutton.h  focuseddialog.cpp  focuseddialog.h  furabstractlistitemdelegate.cpp  furabstractlistitemdelegate.h  furlistrow.h  guitransactionsutils.cpp  guitransactionsutils.h  jdcoingui.cpp  jdcoingui.h  loadingdialog.cpp  loadingdialog.h  lockunlock.cpp  (+53 more)
src/qt/jdcoin/forms/: addresseswidget.ui  coldstakingwidget.ui  csrow.ui  dashboardwidget.ui  masternodeswidget.ui  masternodewizarddialog.ui  receivewidget.ui  requestdialog.ui  send.ui  sendchangeaddressdialog.ui  sendcustomfeedialog.ui  sendmultirow.ui  topbar.ui  welcomecontentwidget.ui
src/qt/jdcoin/res/css/: style_dark.css  style_light.css
src/qt/jdcoin/settings/: settingsbackupwallet.cpp  settingsbackupwallet.h  settingsbittoolwidget.cpp  settingsbittoolwidget.h  settingsconsolewidget.cpp  settingsconsolewidget.h  settingsdisplayoptionswidget.cpp  settingsdisplayoptionswidget.h  settingsexportcsv.cpp  settingsexportcsv.h  settingsfaqwidget.cpp  settingsfaqwidget.h  settingsinformationwidget.cpp  settingsinformationwidget.h  settingsmainoptionswidget.cpp  settingsmainoptionswidget.h  settingsmultisenddialog.cpp  settingsmultisenddialog.h  settingsmultisendwidget.cpp  settingsmultisendwidget.h  settingsnetworkwidget.cpp  settingsnetworkwidget.h  settingssignmessagewidgets.cpp  settingssignmessagewidgets.h  settingswalletoptionswidget.cpp  settingswalletoptionswidget.h  settingswalletrepairwidget.cpp  settingswalletrepairwidget.h  settingswidget.cpp  settingswidget.h
src/qt/jdcoin/settings/forms/: settingsbittoolwidget.ui  settingsdisplayoptionswidget.ui  settingsfaqwidget.ui  settingsmainoptionswidget.ui  settingssignmessagewidgets.ui  settingswidget.ui
src/qt/locale/: jdcoin_de.ts  jdcoin_en.ts  jdcoin_en_US.ts  jdcoin_es.ts  jdcoin_es_ES.ts  jdcoin_fr_FR.ts  jdcoin_hr_HR.ts  jdcoin_it.ts  jdcoin_ko_KR.ts  jdcoin_nl.ts  jdcoin_pl.ts  jdcoin_ru.ts  jdcoin_tr.ts  jdcoin_zh_CN.ts
src/qt/res/: jdcoin-qt-res.rc
src/qt/res/css/: default.css
src/qt/res/icons/: bitcoin.icns
src/qt/test/: paymentservertests.cpp  test_main.cpp  uritests.cpp
test/: README.md
util/: fetch-params.sh
(+298 files in other folders)
